--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,62 @@
+.body {
+  font-family: "Roboto", sans-serif;
+  color: #2e2f42;
+}
 
+.header {
+  background: #fff;
+}
+
+.logo {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.16667;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #2e2f42;
+  text-decoration: none;
+}
+
+.piece-logo {
+  color: #4d5ae5;
+}
+
+.menu-nav {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  text-decoration: none;
+}
+
+.menu-nav:hover {
+  color: #404bbf;
+}
+
+.menu-nav:active {
+  color: #404bbf;
+  text-decoration: underline;
+}
+
+.email,
+.tel {
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  color: #434455;
+}
+
+.tel:hover {
+  color: #404bbf;
+}
+
+.email:hover {
+  color: #404bbf;
+}
