--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,10 @@ body {
   color: #404bbf;
 }
 
+.header-menu-nav:focus {
+  color: #404bbf;
+}
+
 .header-contact-list {
   list-style: none;
 }
@@ -60,7 +64,8 @@ body {
   color: #434455;
 }
 
-.header-contact-link:hover {
+.header-contact-link:hover,
+.header-contact-link:focus {
   color: #404bbf;
 }
 
@@ -89,7 +94,8 @@ body {
   cursor: pointer;
 }
 
-.button:hover {
+.button:hover,
+.button:focus {
   background-color: #404bbf;
 }
 
